--- a/style.css
+++ b/style.css
@@ -1049,3 +1049,250 @@ footer h4 {
   object-fit: contain;
 }
 /* END PRODUCT DETAIL PAGE */
+
+.installment_header {
+  padding: 20px 0px 20px 0px;
+}
+
+.installment_header .installment_icon {
+  width: 152px;
+  height: 42px;
+  display: inline-block;
+}
+
+.installment_header .installment_icon img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.installment_header .col {
+  display: flex;
+  align-items: center;
+}
+
+.installment_header .col a {
+  text-decoration: none;
+  color: rgb(5, 34, 74);
+  font-weight: 700;
+  transition: 0.3s;
+  text-align: center;
+}
+
+.installment_header .col a:hover {
+  color: var(--primary-color);
+}
+.installment_header .col p {
+  margin: 0;
+  padding: 8px 14px;
+  border: 2px solid var(--primary-color);
+  border-radius: 30px;
+  text-align: center;
+  color: var(--primary-color);
+  font-weight: 700;
+  font-size: 14px;
+  transition: 0.3s;
+}
+
+.installment_header .col p:hover {
+  background: var(--primary-color);
+  color: white;
+  cursor: pointer;
+}
+/* END HEADER INSTALLMENT */
+.installment_banner {
+  background: #ed2f2c;
+  padding: 30px 0;
+}
+
+.installment_banner .banner_title {
+  color: white;
+}
+
+.installment_banner .banner_title h1 {
+  font-size: 56px;
+  font-weight: bold;
+}
+
+.installment_banner .banner_action a {
+  display: inline-block;
+  width: 174px;
+  height: 64px;
+}
+
+.installment_banner .banner_action a img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  transition: 0.4s;
+}
+
+.installment_banner .banner_action a:last-child {
+  margin-top: 30px;
+}
+.installment_banner .col-7 .col-7-img-container {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+.installment_banner .col-7 .col-7-img-container img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.banner_action a:hover img {
+  scale: 110%;
+}
+/* END INSTALLMENT BANNER */
+
+.installment_hdsg {
+  background: #f8f8f8;
+  padding: 40px 0 40px 0;
+}
+.installment_hdsg .hdsg_title {
+  color: var(--primary-color);
+  font-weight: bold;
+}
+
+.installment_hdsg .hdsg_condition {
+  margin: 26px 0 30px 0;
+  font-weight: bold;
+}
+
+.installment_hdsg p {
+  font-size: 20px;
+}
+
+.group_content_hdsg {
+  box-shadow: 3px 3px 3px 0px rgb(0 0 0 / 10%);
+  background: #ffffff;
+  margin-top: 60px;
+  position: relative;
+  padding: 30px;
+  border-radius: 28px;
+}
+
+.group_content_hdsg .title_group_content {
+  background: #eb2727;
+  margin: 0;
+  color: white;
+  padding: 16px 10px;
+  width: 50%;
+  text-align: center;
+  border-top-left-radius: 26px;
+  border-top-right-radius: 26px;
+  position: absolute;
+  top: -67px;
+  left: 0px;
+}
+
+.group_content_hdsg .group_content_img {
+  width: 252px;
+  height: 233px;
+  position: absolute;
+  right: 0;
+  top: -160px;
+}
+.group_content_hdsg .group_content_img img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+.installment_hdsg .three_step_to_pay {
+  display: flex;
+  justify-content: center;
+}
+.installment_hdsg .three_step_to_pay .col {
+  background: #f0f0f0;
+  margin: 0 8px;
+  padding: 40px 18px;
+  border-radius: 26px;
+}
+.installment_hdsg .three_step_to_pay .col h4 {
+  text-align: center;
+  padding: 10px 0;
+  width: 80%;
+  border-radius: 12px;
+  background: var(--primary-color);
+  color: white;
+}
+
+.installment_hdsg .three_step_to_pay .col p {
+  padding: 6px;
+}
+
+.group_section_3 {
+  width: 80%;
+
+  display: inline-block;
+}
+
+.group_section_3:hover img {
+  scale: 110%;
+}
+
+.group_section_3 img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  transition: 0.5s;
+}
+
+.all_banks .col a {
+  width: 100%;
+  height: 100%;
+}
+
+.all_banks .col a:hover img {
+  scale: 110%;
+}
+
+.all_banks .col a img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  transition: 0.4s;
+}
+
+/* END HDSAIGON SECTION */
+.installment_mpos {
+  background: white;
+  padding: 40px 0;
+}
+.installment_mpos p {
+  font-size: 18px;
+}
+.mpos_title {
+  font-weight: 650;
+  color: var(--primary-color);
+}
+
+.mpos_section {
+  margin: 20px 0 28px 0;
+  font-weight: bold;
+}
+
+.section_2_img {
+  width: 100%;
+  height: 100%;
+}
+
+.section_2_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.bank_list_img {
+  width: 60%;
+  height: 100%;
+}
+
+.bank_list_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+/* END MPOS SECTION */
+/* END INSTALLMENT PAGE */
