--- a/style.css
+++ b/style.css
@@ -1669,6 +1669,150 @@ footer h4 {
 }
 
 /* END PAGINATION */
+.warranty_banner1 {
+  position: relative;
+  padding: 60px 0;
+}
+
+.warranty_banner1::after {
+  content: "";
+  background-image: url(https://w.ladicdn.com/s1440x290/5bf3dc7edc60303c34e4991f/bg-20201021091601.jpg);
+  background-size: cover;
+  position: absolute;
+
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.28;
+  z-index: -1;
+}
+
+.warranty_banner1 h2 {
+  color: rgb(229, 32, 63);
+  font-size: 38px;
+  font-weight: 800;
+  line-height: 1.6;
+  margin: 0;
+  position: relative;
+  z-index: 2;
+  font-family: "Oswald", sans-serif;
+}
+
+.warranty_banner1 h2 .yellow_square {
+  position: absolute;
+  width: 44px;
+  height: 44px;
+  top: -8px;
+  left: -17.8884px;
+  background: rgb(255, 226, 33);
+  z-index: -1;
+}
+
+.warranty_banner1 h4 {
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+}
+
+.warranty_img_col5 {
+  position: relative;
+}
+
+.warranty_img {
+  position: absolute;
+  max-width: 400px;
+  max-height: 380px;
+}
+
+.warranty_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.warranty_banner2 {
+  position: relative;
+  padding: 60px 0;
+}
+
+.warranty_banner2::after {
+  content: "";
+  background-image: url(https://w.ladicdn.com/s1440x929/5bf3dc7edc60303c34e4991f/chinhsachbaohanh-recovered-12-20201021100020.png);
+  background-size: cover;
+  position: absolute;
+
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.16;
+  z-index: -1;
+}
+
+.warranty_banner2 .warranty_step {
+  max-width: 980px;
+  max-height: 270px;
+}
+
+.warranty_banner2 .warranty_step img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.warranty_step:first-child {
+  position: relative;
+}
+
+.warranty_step_img {
+  max-width: 200px;
+  max-height: 200px;
+}
+
+.warranty_step_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.warranty_action {
+  position: absolute;
+  bottom: 0;
+  right: 40px;
+}
+
+.warranty_action .call_gear {
+  max-width: 200px;
+  max-height: 66px;
+  display: inline-block;
+  transition: 0.4s;
+}
+
+.warranty_action .call_gear:hover {
+  scale: 110%;
+}
+
+.warranty_action .call_gear img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.warranty_banner3 {
+  background-color: #e5203f;
+  color: white;
+  padding: 18px 0;
+}
+
+.warranty_banner3 h3 {
+  font-family: "Oswald", sans-serif;
+  text-decoration: underline;
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 1.6;
+}
+
+/* END WARRANTY PAGE */
 
 .header_responsive {
   display: none;
@@ -1693,5 +1837,15 @@ footer h4 {
 @media screen and (max-width: 790px) {
   .action__contact {
     display: none;
+  }
+  .warranty_action {
+    max-width: 242px;
+    max-height: 66px;
+    display: inline-block;
+    transition: 0.4s;
+    position: fixed;
+    bottom: 80px;
+    right: 0;
+    z-index: 999;
   }
 }
