--- a/style.css
+++ b/style.css
@@ -1813,7 +1813,152 @@ footer h4 {
 }
 
 /* END WARRANTY PAGE */
+.user_menu {
+  background: rgb(242, 228, 228);
+  padding: 30px 0 120px 0;
+  color: #3d5376;
+  font-family: "Oswald", sans-serif;
+  word-spacing: 3px;
+}
 
+.user_menu h1 {
+  font-size: 40px;
+}
+
+.account_user_page,
+.logout,
+.order_user_page {
+  max-width: 280px;
+  height: 320px;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+  background: white;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  transition: 0.4s;
+}
+
+.account_user_page:hover,
+.logout:hover,
+.order_user_page:hover {
+  scale: 103%;
+}
+
+.account_user_page .icon_user,
+.logout .icon_user,
+.order_user_page .icon_user {
+  width: 140px;
+  height: 140px;
+  font-size: 140px;
+  margin-bottom: 60px;
+}
+
+.account_user_page a,
+.logout a,
+.order_user_page a {
+  text-decoration: none;
+  font-size: 20px;
+  margin-top: 40px;
+  color: green;
+}
+
+.account_user_page a:hover,
+.logout a:hover,
+.order_user_page a:hover {
+  color: rgb(17, 110, 176);
+}
+/* END USER PAGE */
+.account_setting_section {
+  padding: 30px 50px;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+  margin: 20px auto;
+  max-width: 600px;
+  background: white;
+}
+
+.avatar_user {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+}
+
+.avatar_user img {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  object-fit: cover;
+}
+label {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 500;
+  color: #777;
+  padding-left: 3px;
+}
+
+.form-control {
+  border-radius: 10px;
+}
+
+input[placeholder] {
+  font-weight: 500;
+}
+.form-control:focus {
+  box-shadow: none;
+  border: 1.5px solid #0779e4;
+}
+select {
+  display: block;
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  height: 40px;
+  padding: 5px 10px;
+  /* -webkit-appearance: none; */
+}
+
+select:focus {
+  outline: none;
+}
+.button {
+  background-color: #fff;
+  color: #0779e4;
+}
+.button:hover {
+  background-color: #0779e4 !important;
+  color: #fff !important;
+}
+
+.btn-primary {
+  background-color: #0779e4;
+}
+.dangerbtn {
+  background-color: #fff;
+  color: #e20404;
+  border: 1px solid #ddd;
+  padding: 10px;
+  border-radius: 4px;
+  transition: 0.4s;
+}
+.dangerbtn:hover {
+  background-color: #e20404;
+  color: #fff;
+}
+@media (max-width: 576px) {
+  .wrapper {
+    padding: 25px 20px;
+  }
+  #deactivate {
+    line-height: 18px;
+  }
+}
+
+.user_order_title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/* END USER ACCOUNT INFO */
 .header_responsive {
   display: none;
 }
